platform/terraform/03_servicemesh/istio-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
    #  labels:
    #topology.istio.io/network=kubenetwork
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
